--- a/TODO
+++ b/TODO
@@ -1,30 +1,8 @@
-------------------------------------------------------------
--= 1.2 =-
-
-* Hugs - look for "FIX (HUGS)"
-
-* Haddock
-  - should process hidden modules as well as exposed ones.  The hidden
-    modules might contain entities that are re-exported by an exposed
-    module.  Hidden modules should use the #hide haddock directive.
-
-  - if GHC is present and hscpp is not, we can use 'ghc -E -cpp'.  This
-    also unlits.
-
-  - haddock should be passed the names of the interface files for the
-    dependent packages (gotten from haddock_interfaces field of the
-    dependent packages, query ghc-pkg).
-
-  - we should install the haddock interface, and fill in the location
-    in haddock_interfaces.  Similarly for the HTML, and haddock_html.
-
-* grep for "FIX"
+OLD TODOS:
 
 * Parsing
 ** Allow quoting in the options fields, to allow things like
   -f"something with spaces"
-** Instead of freaking out on unknown fields, the parser should return
-   a list of those unknown fields so a warning can be printed. Or not.
 
 * Doc
 ** do comments have to start in the first column?
@@ -59,8 +37,6 @@
 -= Future Releases =-
 
 * Depends on HC-PKG
-** hugs-pkg
-** register for hugs
 ** configure: check for presence of build dependencies
 
 * NHC Support
@@ -70,21 +46,9 @@
 ** nhc-pkg (see old package manager code)
 ** register
 
-* Hugs
-- no way to tell Hugs to turn packages on or off
-- no register / unregister for hugs
-
 * Misc
-** ./Setup.lhs bdist
 ** Reorganize compiler dependent code into Distribution.Compiler.*
 ** API Versioning? Libtool-style or just a major number?
-** Extensions
-- complain if their use makes the code non-portable?
--- but what does this mean? ghc & hugs?
-
-** "collections / distributions, etc" multiple cabal packages in one package
-** It would be useful to have alternatives in dependencies, e.g. HGL
-   could depend on X11 | Win32.
 
 ** sanity checking tool for configuration; are all the .hs files
    included, etc.
