Complete move of cabal-get to cabal-install + some fixups
20060430174300-ccb46-afa182bf48406991374360175dad548d03ef09c9.gz

--- a/cabal-install/INSTALL
+++ b/cabal-install/INSTALL
@@ -1,2 +1,2 @@
-After building and installing with cabal, copy etc-cabal-get to
-/etc/cabal-get.
+After building and installing with cabal, copy etc-cabal-install to
+/etc/cabal-install.
