--- a/README
+++ b/README
@@ -1,69 +1,42 @@
 Cabal home page:
 http://www.haskell.org/cabal
 
-WARNING If you already have Cabal installed, including GHC 6.4 users,
-read "Working with older versions of Cabal" for information first!  If
-you do this out of order, stuff might get screwy.  If stuff gets
-screwy, post to libraries@haskell.org for help.
+WARNING If you already have Cabal installed, and are using GHC 6.4.1
+or earlier, read "Working with older versions of Cabal" for
+information first!  If you do this out of order, stuff might get
+screwy.  If stuff gets screwy, post to libraries@haskell.org for help.
 
--= Quirky things about the build system =-
-
-* If you don't already have Cabal installed: "make install" as root,
-  then try "ghci -package Cabal" to test it.  If you get an error
-  about multiple versions of Cabal, read the section below "Working
-  with older versions of Cabal" You were supposed to read this first.
-
-* The cabal should build just like any other Cabal-ized package.  If
-  you're using windows or have another means of building cabal
-  packages, you might want to ignore the GNUmakefile
-  altogether.
-
-* GNUmakefile is the one you're probably interested in.  If you see
-  Makefile, it is probably from the fptools build tree, and it won't
-  work on its own.
-
-* The GNUmakefile wraps the standard Cabal setup script; the
-  GNUmakefile is a convinience for bootstrapping the system. "sudo
-  make install" should handle HUnit, generate the setup script,
-  configure, build, install, and register it in a standard location.
-
-* HUnit is included both as a test case for Cabal, and because Cabal
-  uses HUnit for testing.  Don't panic.
-
--= Working with older versions of Cabal =-
-
-* Installing as root / Administrator (GHC's global package file)
+-= Installing as root / Administrator (GHC's global package file) =-
 
 This is the recommended method of installing Cabal.
 
-If you have an older version of Cabal installed, you probably just
-want to remove it:
+run "make install" as root
 
-  $ ghc-pkg unregister Cabal
+The Makefile wraps the standard Cabal setup script; the
+Makefile is a convinience for bootstrapping the system. "sudo
+make install" should generate the setup script, configure, build,
+install, and register it in a standard location.
+
+Cabal should build just like any other Cabal-ized packagem, so if you
+you can't or don't want to use the Makefile, you can run:
+ghc --make Setup.lhs -o setup
+./setup configure
+./setup build
+sudo ./setup install
+
+-= Installing as a user (no root or administer access) =-
+
+ghc --make Setup.lhs -o setup
+./setup configure --prefix=$HOME --user
+./setup build
+./setup install --user
 
 
-If you don't want to remove it, and want both the old and new versions
-installed, that's fine... In order to use the new one after
-installation you may have to specify which version you want when you
-run ghci.  For instance:
-
-  $ ghci -package Cabal
-    ...
-    ghc-6.4: Error; multiple packages match Cabal: Cabal-1.0, Cabal-1.1.3
-  $ ghci -package Cabal-1.1.3
-    ...
-    (OK)
-
-* Installing as a user (no root or administer access)
-
-If you have cabal installed already, you can this command to remove
-it:
-
-  $ ghc-pkg unregister Cabal --user
+Additional notes for GHC-6.4.1 and older:
 
 If:
 
-1) Cabal is installed in the global package file (use ghc-pkg -l to see)
+1) Cabal is installed in the global package file (use ghc-pkg list to see)
 
 2) You don't have root access
 
@@ -73,6 +46,23 @@ then this formula may help to hide the global version:
 
   $ ghc-pkg describe Cabal-1.0 | ghc-pkg --user register -
   $ ghc-pkg --user hide Cabal-1.0
+
+-= Working with older versions of GHC and Cabal =-
+
+If you have GHC 6.4.2 or later then it's recommended just to leave the
+old version of Cabal installed (unless you are really sure that no
+existing packages still needs it).
+
+Prior to GHC 6.4.2 however, GHC didn't deal particularly well with
+having multiple versions of packages installed at once. So if you are
+using GHC 6.4.1 or older and you have an older version of Cabal
+installed, you probably just want to remove it:
+
+  $ ghc-pkg unregister Cabal
+
+or if you had Cabal installed just for your user account then:
+
+  $ ghc-pkg unregister Cabal --user
 
 -= Your Help =-
 
@@ -86,6 +76,8 @@ The codebase is a very manageable size.
 
 You can get the code from the web page; the version control system we
 use is very open and welcoming to new developers.
+
+darcs get --partial http://darcs.haskell.org/packages/Cabal
 
 -= Debian Templates =-
 
@@ -101,6 +93,7 @@ dependencies...
 Cabal Coders:
 - Krasimir Angelov
 - Bjorn Bringert
+- Duncan Coutts
 - Isaac Jones
 - David Himmelstrup (Lemmih)
 - Simon Marlow
