--- a/changelog
+++ b/changelog
@@ -1,5 +1,33 @@
 -*-change-log-*-
 
+1.1.6  Duncan Coutts <duncan.coutts@worc.ox.ac.uk> Oct 2006
+	* Released with GHC 6.6
+	* Added support for hoogle
+	* Allow profiling and normal builds of libs to be chosen indepentantly
+	* Default installation directories on Win32 changed
+	* Register haddock docs with ghc-pkg
+	* Get haddock to make hyperlinks to dependent package docs
+	* Added BangPatterns language extension
+	* Various bug fixes
+
+1.1.4  Duncan Coutts <duncan.coutts@worc.ox.ac.uk> May 2006
+	* Released with GHC 6.4.2
+	* Better support for packages that need to install header files
+	* cabal-setup added, but not installed by default yet
+	* Implemented "setup register --inplace"
+	* Have packages exposed by default with ghc-6.2
+	* It is no longer necessary to run 'configure' before 'clean' or 'sdist'
+	* Added support for ghc's -split-objs
+	* Initial support for JHC
+	* Ignore extension fields in .cabal files (fields begining with "x-")
+	* Some changes to command hooks API to improve consistency
+	* Hugs support improvements
+	* Added GeneralisedNewtypeDeriving language extension
+	* Added cabal-version field
+	* Support hidden modules with haddock
+	* Internal code refactoring
+	* More bug fixes
+
 1.1.3  Isaac Jones  <ijones@syntaxpolice.org> Sept 2005
 	* WARNING: Interfaces not documented in the user's guide may
 	  change in future releases.
@@ -10,6 +38,7 @@
 	* Added experimental "command hooks" which completely override the
 	default behavior of a command.
 	* Some bugfixes
+
 1.1.1  Isaac Jones  <ijones@syntaxpolice.org> July 2005
 	* WARNING: Interfaces not documented in the user's guide may
 	  change in future releases.
