--- a/releaseNotes
+++ b/releaseNotes
@@ -9,16 +9,16 @@ changes and installation instructions.
 
 DOWNLOAD:
 
-The Haskell Cabal has reached version 1.1.3.  This pre-release has a
-number of new features and bugfixes.
+The Haskell Cabal has reached version 1.1.6.
 
 Download the Cabal here (source and debian versions available):
 http://www.haskell.org/cabal/download.html
 
 BUGS:
 
-Please report bugs and wish-list items to libraries@haskell.org and
-Isaac Jones: ijones@syntaxpolice.org.
+Please report bugs and wish-list items at:
+http://hackage.haskell.org/trac/hackage
+or send an email to libraries@haskell.org.
 
 ABOUT:
 
@@ -41,11 +41,6 @@ owners; and so on.
 
 NOTES:
 
-You cannot currently execute most setup scripts with "./Setup.lhs"
-since most systems do not have a runHaskell executable installed.  You
-can compile it with ghc thusly: "ghc -package Cabal Setup.lhs -o
-setup" and then use the "setup" executable after that.
-
 This release is meant to provide the community with concrete
 information about how the interfaces are shaping up.  This release
 does NOT fix the interfaces, we can't promise not to break anything
@@ -60,4 +55,3 @@ especially the proposal, which will serve as documentation for this
 release:
 
 http://www.haskell.org/cabal/
-
