--- a/changelog
+++ b/changelog
@@ -28,6 +28,20 @@
 	* Many bugs fixed.
 	* Many internal structural improvements and code cleanups
 
+1.2.4.0 Duncan Coutts <duncan@haskell.org> June 2008
+	* Released with GHC 6.8.3
+	* Backported several fixes and minor improvements from Cabal-1.4
+	* Use a default colour scheme for sources with hscolour >=1.9
+	* Support --hyperlink-source for Haddock >= 2.0
+	* Fix for running in a non-writable directory
+	* Add OSX -framework arguments when linking executables
+	* Updates to the user guide
+	* Allow build-tools names to include + and _
+	* Export autoconfUserHooks and simpleUserHooks
+	* Export ccLdOptionsBuildInfo for Setup.hs scripts
+	* Export unionBuildInfo and make BuildInfo an instance of Monoid
+	* Fix to allow the 'main-is' module to use a pre-processor
+
 1.2.3.0 Duncan Coutts <duncan@haskell.org> Nov 2007
 	* Released with GHC 6.8.2
 	* Includes full list of GHC language extensions
@@ -172,7 +186,7 @@
 	* A user manual has appeared (Thanks, ross!)
 	* for ghc 6.4, configures versionsed depends properly
 	* more features to ./setup haddock
-	
+
 0.4  Isaac Jones  <ijones@syntaxpolice.org> Sun Jan 16 2005
 
 	* Much thanks to all the awesome fptools hackers who have been
