--- a/README
+++ b/README
@@ -1,13 +1,21 @@
 [Cabal home page](http://www.haskell.org/cabal/)
 
+Installation instructions for the Cabal library
+===============================================
+
+If you also want the `cabal` command line program then you need
+the `cabal-install` package in addition to this library.
+
 
 Installing as a user (no root or administer access)
-===================================================
+---------------------------------------------------
 
     ghc --make Setup
     ./Setup configure --user
     ./Setup build
     ./Setup install
+
+Note the use of the `--user` flag at the configure step.
 
 This will install into `$HOME/.cabal/` or the equivalent on Windows.
 If you want to install elsewhere use the `--prefix=` flag at the
@@ -15,7 +23,7 @@ configure step.
 
 
 Installing as root / Administrator
-==================================
+----------------------------------
 
     ghc --make Setup
     ./Setup configure
