--- a/changelog
+++ b/changelog
@@ -4,11 +4,15 @@
 	* Support for LHC
 
 1.6.0.2 (next stable release)
-	* Added language extensions present in GHC-6.10
+	* Added language extensions present in ghc-6.10
+	* Added support for NamedFieldPuns extension in ghc-6.8
+	* Fix in configure step for ghc-6.6 on Windows
 	* Fix warnings in Path_pkgname.hs module on Windows
 	* Fix for exotic flags in ld-options field
 	* Fix for using pkg-config in a package with a lib and an executable
 	* Fix for building haddock docs for exes that use the Paths module
+	* Fix for installing header files in subdirectories
+	* Ignore ghc -threaded flag when profiling in ghc-6.8 and older
 
 1.6.0.1 Duncan Coutts <duncan@haskell.org> October 2008
 	* Export a compat function to help alex and happy
