New changelog entries for 1.7.x
20090123175645-adfee-7916045b21fb634b2f97c236f79d90efeb1b9118.gz

--- a/changelog
+++ b/changelog
@@ -2,6 +2,11 @@
 
 1.7.x (current development version)
 	* Support for LHC
+	* Added new known license MIT and versioned GPL and LGPL
+	* Deprecate RecordPuns extension in favour of NamedFieldPuns
+	* New VersionRange semantic view as a sequence of intervals
+	* Improved package quality checks
+	* Beginnings of a unit level testsuite using QuickCheck
 
 1.6.0.2 (next stable release)
 	* Added language extensions present in ghc-6.10
